More additions to refresh service